--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "axios": "0.19.0",
+    "bootstrap": "^4.4.1",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "firebase": "6.0.2",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
-    "node-sass": "4.12.0",
+    "mdbootstrap": "^4.16.0",
+    "node-sass": "^4.14.0",
     "react": "^16.8.6",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.8.6",
@@ -28,7 +30,7 @@
     "styled-components": "4.2.0"
   },
   "devDependencies": {
-    "react-scripts": "3.0.0"
+    "react-scripts": "^3.4.1"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
