--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-boost": "^0.4.7",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.4.1",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
@@ -24,6 +25,7 @@
     "express-sslify": "1.2.0",
     "graphql": "^14.6.0",
     "lodash": "^4.17.15",
+    "mdbootstrap": "^4.16.0",
     "react-apollo": "^3.1.3",
     "stripe": "6.28.0"
   },
